# discord-scraper

./: Cargo.toml
src/: main.rs
