[package]
name = "stats-bot"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.5"
once_cell = "1.5.2"
log = "0.4"
pretty_env_logger = "0.4.0"
futures = "0.3"
csv = "1.1"
indicatif = "0.15.0"